grep: fix --max-count=N (-m N) to stop reading after Nth match

With --max-count=N (-m N), grep is supposed to stop reading input
after it has found the Nth match.  However, a recent context-
related change made it so grep would always read to end of file.
* src/grep.c (prtext): Don't let a negative "out_after" value
make "pending" line count negative.
* tests/max-count-overread: New test, for this.
* tests/Makefile.am (TESTS): Add it.
* NEWS (Bug fixes): Mention it.
* THANKS: Add names of two recent bug reporters.
This bug was introduced by commit v2.18-139-g5122195.
Reported by Marc Aldorasi in http://bugs.gnu.org/17640.